# SocrataOxide

./: Cargo.toml  README.md
src/: cli.rs  data.rs  main.rs  opendataurl.rs  run.rs  socrata.rs
